# eclect

./: .gitignore  .gitmodules  Cargo.toml  README.md  config.toml  example_config.toml  rust-toolchain.toml
.github/workflows/: all.yml  build.yml  release.yaml
prost-lastfm/: Cargo.toml  README.md  build.rs
prost-lastfm/extensions/: Cargo.toml  build.rs
prost-lastfm/extensions/src/: lib.rs
prost-lastfm/serde-macros/: Cargo.toml
prost-lastfm/serde-macros/src/: lib.rs
prost-lastfm/service-generator/: Cargo.toml
prost-lastfm/service-generator/src/: lib.rs  service.rs  service_macro.rs
prost-lastfm/src/: api.rs  error.rs  lib.rs  pairs.rs  shim.rs
prost-lastfm/tests/: parse.rs
proto/: auth.proto  error.proto  extensions.proto  service.proto  types.proto  user.proto
src/: config.rs  discord.rs  lastfm.rs  main.rs
