cargo-features = ["edition2024"]

[package]
name = "site-2"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "prost-lastfm",
    "prost-lastfm/extensions",
    "prost-lastfm/serde-macros",
    "prost-lastfm/service-generator",
]
exclude = [
    "prost"
]

[dependencies]
base64 = { version = "0.22.1" }
clap = { version = "4.5.23", features = ["derive"] }
into_enum = { version = "0.1.0" }
http = { version = "1.2.0" }
serde_json = { version = "1.0.134" }
reqwest = { version = "0.12.9", default-features = false, features = ["blocking", "rustls-tls", "json"] }
serde = { version = "1.0.216", features = ["derive"] }
toml = { version = "0.8.19" }
url = { version = "2.5.4" }

discord-rich-presence = { version = "0.2.5" }

prost-lastfm = { path = "prost-lastfm" }
