cargo-features = ["edition2024"]

[package]
name = "eclect"
version = "0.1.0"
edition = "2024"

[workspace]
members = [
    "prost-lastfm",
    "prost-lastfm/extensions",
    "prost-lastfm/serde-macros",
    "prost-lastfm/service-generator",
]
exclude = [
    "prost"
]

[dependencies]
base64 = { version = "0.22.1" }
clap = { version = "4.5.28", features = ["cargo", "derive"] }
directories = { version = "6.0.0" }
http = { version = "1.2.0" }
into_enum = { version = "0.1.0" }
serde_json = { version = "1.0.138" }
reqwest = { version = "0.12.12", default-features = false, features = ["blocking", "rustls-tls", "json"] }
resolve-path = { version = "0.1.0" }
serde = { version = "1.0.217", features = ["derive"] }
toml = { version = "0.8.20" }
url = { version = "2.5.4" }

discord-rich-presence = { version = "0.2.5" }

prost-lastfm = { path = "prost-lastfm" }
